# routes/authRoute.js
@@ -12,6 +12,7 @@ class AuthRoute {
         this.router.post("/logout", authMiddleware, this.authController.logout.bind(this))
         this.router.get("/my-profile", authMiddleware, this.authController.myProfile.bind(this))
         this.router.put("/edit-profile", authMiddleware, this.authController.editProfile.bind(this))
+        this.router.put("/change-password", authMiddleware, this.authController.changePassword.bind(this))
     }
 }
 
